@@ -1,3 +1,7 @@
+2023-08-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/gem.c (ExpandAffine): Mark as a pure function.
+
 2023-07-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/xcf.c (ReadXCFImage): Limit the maximum number of layers
